--- a/.github/workflows/push-to-prod.yaml
+++ b/.github/workflows/push-to-prod.yaml
@@ -3,22 +3,18 @@ name: Push To Production
 on: workflow_dispatch
 
 jobs:
-  copy-file:
+  push-changes:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
-    - name: Pushes test file
-      uses: dmnemec/copy_file_to_another_repo_action@main
+    - name: Pushes to another repository
+      uses: cpina/github-action-push-to-another-repository@main
       env:
         API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
       with:
-        source_file: 'site'
-        destination_repo: 'blakes24/hflatest'
-        destination_folder: '/'
-        user_email: 'blakes24@gmail.com'
-        user_name: 'blakes24'
-        commit_message: 'Push from UAT - ${{ steps.date.outputs.date }}'
+        source-directory: '.'
+        destination-github-username: 'blakes24'
+        destination-repository-name: 'hflatest-prod2'
+        user-email: 'blakes24@gmail.com'
+        target-branch: main
