--- a/.github/workflows/push-test.yaml
+++ b/.github/workflows/push-test.yaml
@@ -3,19 +3,13 @@ name: Push To Production
 on: workflow_dispatch
 
 jobs:
-  push-changes:
+  git-sync:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Pushes to Repository
-      uses: tech-thinker/push-to-repo@main
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
-      with:
-        user-name: "blakes24"
-        user-email: blakes24@gmail.com
-        source-directory: "./"
-        destination-github-username: 'blakes24'
-        destination-repository-name: 'hflatest-prod2'
-        target-branch: main
+      - name: git-sync
+        uses: wei/git-sync@v3
+        with:
+          source_repo: "blakes24/hflatest-dev2"
+          source_branch: "main"
+          destination_repo: "blakes24/hflatest-prod2"
+          destination_branch: "main"
