--- a/.github/workflows/push-test.yaml
+++ b/.github/workflows/push-test.yaml
@@ -6,6 +6,8 @@ jobs:
   git-sync:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: git-sync
         uses: wei/git-sync@v3
         with:
