--- a/.github/workflows/push-to-uat.yaml
+++ b/.github/workflows/push-to-uat.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Merge main -> uat
-        uses: devmasx/merge-branch@v1.4.0
+        uses: devmasx/merge-branch@1.4.0
         with:
           type: now
           target_branch: uat
