--- a/.github/workflows/deploy-to-gh-pages.yaml
+++ b/.github/workflows/deploy-to-gh-pages.yaml
@@ -17,5 +17,5 @@ jobs:
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: /
+        FOLDER: .
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
